Replace sequenced collection accessors